finish without mentor corrections

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
           </ul>
           <!-- Карточки -->
           <ul class="card-set">
-            <li class="card-item">
+             <li class="card-item">
               <a href="" class="cards">
                 <div class="card-thumb">
                   <img
@@ -284,7 +284,7 @@
                 </div>
               </a>
             </li>
-
+            
             <li class="card-item">
               <a href="" class="cards">
                 <div class="card-thumb">
@@ -301,100 +301,114 @@
                     eveniet dolores!
                   </p>
                 </div>
-                </div>
-
+              </div>
                 <div class="card-footer">
                   <h2 class="cards-heading">Growing Business</h2>
                   <p class="cards-content">Приложение</p>
                 </div>
-                </div>
-              </a>
+              </div>
+            </a>
             </li>
-          </ul>
+        </ul>
         </div>
       </section>
-    </main>
+  </main>
 
     <!--footer-->
 
-    <footer class="page-footer">
-      <!--logo-footer-->
+    <footer class="page-footer"><!--logo-footer-->
       <div class="container footer">
-        <div>
-          <a href="" class="brandname" lang="en"
-            ><span class="brandname-one">Web</span
-            ><span class="brandname-two">Studio</span></a
-          >
-          <address class="address">
-            <ul>
-              <li class="footer-item">
-                <a
-                  href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="contacts-geoposition"
-                  >г. Киев, пр-т Леси Украинки, 26</a
-                >
-              </li>
-              <li class="footer-item">
-                <a href="mailto:info@devstudio.com" class="contacts-link"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="footer-item">
-                <a href="tel:+380961111111" class="contacts-link"
-                  >+38 096 111 11 11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
-        <div class="footer-social">
-          <h2 class="footer-heading">присоединяйтесь</h2>
-          <ul class="footer-list">
-            <li class="footer-social-item">
-              <a href="" class="footer-link"
-                ><svg class="footer-icon">
-                  <use
-                    class="footer-img"
-                    href="./img/sprite.svg#icon-instagram1"
-                  ></use>
-                </svg>
-              </a>
+<div>
+        <a href="" class="brandname" lang="en"
+          ><span class="brandname-one">Web</span
+          ><span class="brandname-two">Studio</span></a
+        >
+        <address class="address">
+          <ul>
+            <li class="footer-item">
+              <a
+                href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="contacts-geoposition"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
             </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-link"
-                ><svg class="footer-icon">
-                  <use
-                    class="footer-img"
-                    href="./img/sprite.svg#icon-Twitter1"
-                  ></use>
-                </svg>
-              </a>
+            <li class="footer-item">
+              <a href="mailto:info@devstudio.com" class="contacts-link"
+                >info@devstudio.com</a
+              >
             </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-link"
-                ><svg class="footer-icon">
-                  <use
-                    class="footer-img"
-                    href="./img/sprite.svg#icon-facebook1"
-                  ></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-link"
-                ><svg class="footer-icon">
-                  <use
-                    class="footer-img"
-                    href="./img/sprite.svg#icon-linkedin1"
-                  ></use>
-                </svg>
-              </a>
+            <li class="footer-item">
+              <a href="tel:+380961111111" class="contacts-link"
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
-        </div>
+        </address>
       </div>
-    </footer>
+          <div class="footer-social">
+          <h2 class="work-actions-content">
+          присоединяйтесь
+        </h2>
+        <ul class="footer-list">
+          <li class="footer-social-item">
+            <a href="" class="footer-link"
+              ><svg class="footer-icon">
+                <use
+                  class="footer-img"
+                  href="./img/sprite.svg#icon-instagram1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-link"
+              ><svg class="footer-icon">
+                <use
+                  class="footer-img"
+                  href="./img/sprite.svg#icon-Twitter1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-link"
+              ><svg class="footer-icon">
+                <use
+                  class="footer-img"
+                  href="./img/sprite.svg#icon-facebook1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-link"
+              ><svg class="footer-icon">
+                <use
+                  class="footer-img"
+                  href="./img/sprite.svg#icon-linkedin1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-form">
+        <h2 class="work-actions-content">Подпишитесь на рассылку</h2>
+        <ul class="footer-list">
+          <li class="footer-form-list">
+            <label for="subscribe-form" class="footer-subscribe">
+              <input type="subscribe-email" name="subscribe-form" class="subscribe-input" placeholder="E-mail">
+            </label>
+          </li>
+      <li class="footer-form-list">
+        <button type="submit" class="subscribe-button">Подписаться</button>
+      </li>
+        </ul>
+      </div>
+    </div>
+       </footer>
+
   </body>
 </html>
