--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <li class="nav-item">
             <a href="mailto:info@devstudio.com" class="contacts-nav">
               <svg class="contacts-icon" width="16" height="12">
-                <use href="./img/sprite.svg#icon-envelope"></use>
+                <use href="../img/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -81,35 +81,35 @@
               <form class="form" autocomplete="off">
                 <h2 class="form-title">Оставьте свои данные, мы вам перезвоним</h2>
 
-               <label for="name" class="form-field">
+               <label class="form-field">
+                 <span class="form-label">Имя</span>
                   <input type="text" class="form-input" name="name" autofocus>
-                  <span class="form-label">Имя</span>
                   <svg class="form-icon" width="20" height="20">
                 <use href="./img/sprite.svg#icon-name"></use>
               </svg>
                 </label>
 
-                <label for="tel" class="form-field">
-                  <input type="tel" class="form-input" name="tel">
+                <label class="form-field">
                   <span class="form-label">Телефон</span>
+                  <input type="tel" class="form-input" name="tel">
                   <svg class="form-icon" width="20" height="20">
-                <use href="./img/sprite.svg#icon-tel"></use>
-              </svg>
+                    <use href="./img/sprite.svg#icon-tel"></use>
+                  </svg>
                 </label>
 
-                <label for="email" class="form-field">
-                  <input type="email" class="form-input" name="email">
+                <label class="form-field">
                   <span class="form-label">Почта</span>
+                  <input type="email" class="form-input" name="email">
                   <svg class="form-icon" width="20" height="20">
                 <use href="./img/sprite.svg#icon-email"></use>
               </svg>
                 </label>
 
-                <label for="comment" class="form-field"><span class="form-label">Комментарий</span>
+                <label class="form-field"><span class="form-label">Комментарий</span>
                   <textarea class="form-comment" name="comment" placeholder="Введите текст"></textarea>
                 </label>
 
-                <label for="agreement" class="form-agreement">
+                <label class="form-agreement">
                   <input type="checkbox" class="form-checkbox" name="agreement" value="agreement" checked>
                   <span class="checkbox-icon"></span>
                   <span class="section-content">Соглашаюсь с рассылкой и принимаю <a class="form-policy" href=""> Условия договора</a>
@@ -504,7 +504,7 @@
 
     <footer class="page-footer"><!--logo-footer-->
       <div class="container footer">
-<div>
+        <div class="footer-address">
         <a href="" class="brandname" lang="en"
           ><span class="brandname-one">Web</span
           ><span class="brandname-two">Studio</span></a
@@ -580,18 +580,18 @@
           </li>
         </ul>
       </div>
-      <div class="footer-form">
+      <div class="footer-box">
         <h2 class="work-actions-content">Подпишитесь на рассылку</h2>
-        <ul class="footer-list">
-          <li>
-            <label for="subscribe-form" class="footer-subscribe">
+        <form class="footer-form">
+        <label for="subscribe-form" class="footer-subscribe">
               <input type="subscribe-email" name="subscribe-form" class="subscribe-input" placeholder="E-mail" autocomplete="on">
-            </label>
-          </li>
-      <li>
-        <button type="submit" class="subscribe-button">Подписаться</button>
-      </li>
-        </ul>
+        </label>
+        <button type="submit" class="subscribe-button">Подписаться
+          <svg class="footer-form-icon">
+            <use href="./img/sprite.svg#icon-paperplane"></use>
+          </svg>
+        </button>
+        </form>
       </div>
     </div>
        </footer>
