--- a/index.html
+++ b/index.html
@@ -503,29 +503,29 @@
 
     <footer class="page-footer"><!--logo-footer-->
       <div class="container footer">
-        <div class="footer-address">
+        <div class="page-footer__address">
         <a href="" class="logo" lang="en"
           ><span class="page-header__logo">Web</span
-          ><span class="page-header__logo--white">Studio</span></a
+          ><span class="logo page-footer__logo">Studio</span></a
         >
         <address class="address">
           <ul>
-            <li class="footer-item">
+            <li class="address__item">
               <a
                 href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="contacts-geoposition"
+                class="address__geoposition"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="contacts-link"
+            <li class="address__item">
+              <a href="mailto:info@devstudio.com" class="address-link"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="contacts-link"
+            <li class="address__item">
+              <a href="tel:+380961111111" class="address-link"
                 >+38 096 111 11 11</a
               >
             </li>
@@ -536,10 +536,10 @@
           <h2 class="work-actions-content">
           присоединяйтесь
         </h2>
-        <ul class="footer-list">
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
+        <ul class="footer-social__list">
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link"
+              ><svg class="footer-social__icon">
                 <use
                   class="footer-img"
                   href="./img/sprite.svg#icon-instagram1"
@@ -547,31 +547,31 @@
               </svg>
             </a>
           </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link"
+              ><svg class="footer-social__icon">
                 <use
-                  class="footer-img"
+                  class="footer-social__picture"
                   href="./img/sprite.svg#icon-Twitter1"
                 ></use>
               </svg>
             </a>
           </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link"
+              ><svg class="footer-social__icon">
                 <use
-                  class="footer-img"
+                  class="footer-social__picture"
                   href="./img/sprite.svg#icon-facebook1"
                 ></use>
               </svg>
             </a>
           </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link"
+              ><svg class="footer-social__icon">
                 <use
-                  class="footer-img"
+                  class="footer-social__picture"
                   href="./img/sprite.svg#icon-linkedin1"
                 ></use>
               </svg>
