--- a/portfolio.html
+++ b/portfolio.html
@@ -21,37 +21,40 @@
   <body>
     <!--Шапка-->
 
-    <header class="header">
-      <div class="header-container container">
-        <a href="" class="brandname" lang="en"
-          ><span class="brandname-one">Web</span>Studio</a
+     <header class="page-header">
+      <div class="page-header__container container">
+        <a href="" class="logo " lang="en"
+          ><span class="logo page-header__logo">Web</span>Studio</a
         >
         <!--navigation-->
         <nav class="navigation">
-          <ul class="site-nav">
-            <li class="nav-item">
-              <a href="./index.html" class="link">Студия</a>
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a href="./index.html" class="navigation__link">Студия</a>
             </li>
-            <li class="nav-item">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+            <li class="navigation__item">
+              <a href="./portfolio.html" class="navigation__link navigation__link--active">Портфолио</a>
             </li>
-            <li class="nav-item"><a href="" class="link">Контакты</a></li>
+            <li class="navigation__item"><a href="" class="navigation__link">Контакты</a></li>
           </ul>
-          <!-- ul>li*2>p+p швидке написання коду-->
         </nav>
         <!--Contacts info-->
         <ul class="contacts">
-          <li class="nav-item">
-            <a href="mailto:info@devstudio.com" class="contacts-nav">
-              <svg class="contacts-icon" width="16" height="12">
-                <use href="./img/sprite.svg#icon-envelope"></use>
+          <li class="navigation__item">
+            <a href="mailto:info@devstudio.com" class="contacts__link">
+              <svg class="contacts__icon-mail" width="16" height="12">
+                <use href="../img/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="nav-item">
-            <a href="tel:+380961111111" class="contacts-nav"
-              ><svg class="contacts-icon-phone" width="10" height="16">
+          <li class="navigation__item">
+            <a href="tel:+380961111111" class="contacts__link"
+              ><svg
+                class="contacts__icon-phone"
+                width="10"
+                height="16"
+              >
                 <use href="./img/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -67,21 +70,21 @@
         <!-- Навигация Портфолио -->
         <div class="container">
           <h1 class="visually-hidden">Навигация Портфолио</h1>
-          <ul class="button-row">
-            <li class="button">
-              <button type="button" class="buttons">Все</button>
+          <ul class="portfolio-navigation__list">
+            <li class="portfolio-navigation__item">
+              <button type="button" class="portfolio-navigation__button">Все</button>
             </li>
-            <li class="button">
-              <button type="button" class="buttons">Веб-сайты</button>
+            <li class="portfolio-navigation__item">
+              <button type="button" class="portfolio-navigation__button">Веб-сайты</button>
             </li>
-            <li class="button">
-              <button type="button" class="buttons">Приложения</button>
+            <li class="portfolio-navigation__item">
+              <button type="button" class="portfolio-navigation__button">Приложения</button>
             </li>
-            <li class="button">
-              <button type="button" class="buttons">Дизайн</button>
+            <li class="portfolio-navigation__item">
+              <button type="button" class="portfolio-navigation__button">Дизайн</button>
             </li>
-            <li class="button">
-              <button type="button" class="buttons">Маркетинг</button>
+            <li class="portfolio-navigation__item">
+              <button type="button" class="portfolio-navigation__button">Маркетинг</button>
             </li>
           </ul>
           <!-- Карточки -->
@@ -318,29 +321,29 @@
 
     <footer class="page-footer"><!--logo-footer-->
       <div class="container footer">
-        <div class="footer-address">
-        <a href="" class="brandname" lang="en"
-          ><span class="brandname-one">Web</span
-          ><span class="brandname-two">Studio</span></a
+        <div class="page-footer__address">
+        <a href="" class="logo" lang="en"
+          ><span class="page-header__logo">Web</span
+          ><span class="logo page-footer__logo">Studio</span></a
         >
         <address class="address">
           <ul>
-            <li class="footer-item">
+            <li class="address__item">
               <a
                 href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="contacts-geoposition"
+                class="address__geoposition"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="contacts-link"
+            <li class="address__item">
+              <a href="mailto:info@devstudio.com" class="address-link"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="contacts-link"
+            <li class="address__item">
+              <a href="tel:+380961111111" class="address-link"
                 >+38 096 111 11 11</a
               >
             </li>
@@ -348,13 +351,13 @@
         </address>
       </div>
           <div class="footer-social">
-          <h2 class="work-actions-content">
+          <h2 class="footer-social__title">
           присоединяйтесь
         </h2>
-        <ul class="footer-list">
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
+        <ul class="footer-social__list">
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link"
+              ><svg class="footer-social__icon">
                 <use
                   class="footer-img"
                   href="./img/sprite.svg#icon-instagram1"
@@ -362,31 +365,31 @@
               </svg>
             </a>
           </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link"
+              ><svg class="footer-social__icon">
                 <use
-                  class="footer-img"
+                  class="footer-social__picture"
                   href="./img/sprite.svg#icon-Twitter1"
                 ></use>
               </svg>
             </a>
           </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link"
+              ><svg class="footer-social__icon">
                 <use
-                  class="footer-img"
+                  class="footer-social__picture"
                   href="./img/sprite.svg#icon-facebook1"
                 ></use>
               </svg>
             </a>
           </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
+          <li class="footer-social__item">
+            <a href="" class="footer-social__link"
+              ><svg class="footer-social__icon">
                 <use
-                  class="footer-img"
+                  class="footer-social__picture"
                   href="./img/sprite.svg#icon-linkedin1"
                 ></use>
               </svg>
@@ -394,14 +397,14 @@
           </li>
         </ul>
       </div>
-      <div class="footer-box">
-        <h2 class="work-actions-content">Подпишитесь на рассылку</h2>
-        <form class="footer-form">
-        <label for="subscribe-form" class="footer-subscribe">
-              <input type="subscribe-email" name="subscribe-form" class="subscribe-input" placeholder="E-mail" autocomplete="on">
+      <div class="footer-form">
+        <h2 class="footer-form__title">Подпишитесь на рассылку</h2>
+        <form class="footer-form__subscribe">
+        <label for="subscribe-form" class="footer-form__label">
+              <input type="subscribe-email" name="subscribe-form" class="footer-form__input" placeholder="E-mail" autocomplete="on">
         </label>
-        <button type="submit" class="subscribe-button">Подписаться
-          <svg class="footer-form-icon">
+        <button type="submit" class="footer-form__button">Подписаться
+          <svg class="footer-form__icon">
             <use href="./img/sprite.svg#icon-paperplane"></use>
           </svg>
         </button>
