--- a/portfolio.html
+++ b/portfolio.html
@@ -89,9 +89,9 @@
           </ul>
           <!-- Карточки -->
           <ul class="card-set">
-             <li class="card-item">
-              <a href="" class="cards">
-                <div class="card-thumb">
+             <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__thumb">
                   <img
                     src="./img/card-1.jpg"
                     alt="Ноутбук с веб-сайтом"
@@ -99,7 +99,7 @@
                     height="294"
                   />
 
-                  <div class="card-overlay">
+                  <div class="card-set__overlay">
                     <p>
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                     </p>
@@ -107,22 +107,22 @@
                 </div>
 
                 <div class="card-footer">
-                  <h2 class="cards-heading">Технокряк</h2>
-                  <p class="cards-content">Веб-сайт</p>
+                  <h2 class="card-set__heading">Технокряк</h2>
+                  <p class="card-set__content">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a href="" class="cards">
-                <div class="card-thumb">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__thumb">
                   <img
                     src="./img/card-2.jpg"
                     alt="Постер"
                     width="370"
                     height="294"
                   />
-                  <div class="card-overlay">
+                  <div class="card-set__overlay">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
                     repudiandae nostrum quo ea sapiente earum quam magni dicta
@@ -131,24 +131,24 @@
                 </div>
                 </div>
                 <div class="card-footer">
-                  <h2 class="cards-heading">
+                  <h2 class="card-set__heading">
                     Постер New Orlean vs Golden Star
                   </h2>
-                  <p class="cards-content">Дизайн</p>
+                  <p class="card-set__content">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a href="" class="cards">
-                <div class="card-thumb">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__thumb">
                   <img
                     src="./img/card-3.jpg"
                     alt="Логотип ресторана"
                     width="370"
                     height="294"
                   />
-                  <div class="card-overlay">
+                  <div class="card-set__overlay">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
                     repudiandae nostrum quo ea sapiente earum quam magni dicta
@@ -157,15 +157,15 @@
                 </div>
                 </div>
                 <div class="card-footer">
-                  <h2 class="cards-heading">Ресторан Seafood</h2>
-                  <p class="cards-content">Приложение</p>
+                  <h2 class="card-set__heading">Ресторан Seafood</h2>
+                  <p class="card-set__content">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a href="" class="cards">
-                <div class="card-thumb">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__thumb">
                   <img
                     class="img"
                     src="./img/card-4.jpg"
@@ -173,7 +173,7 @@
                     width="370"
                     height="294"
                   />
-                  <div class="card-overlay">
+                  <div class="card-set__overlay">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
                     repudiandae nostrum quo ea sapiente earum quam magni dicta
@@ -182,15 +182,15 @@
                 </div>
                 </div>
                 <div class="card-footer">
-                  <h2 class="cards-heading">Проект Prime</h2>
-                  <p class="cards-content">Маркетинг</p>
+                  <h2 class="card-set__heading">Проект Prime</h2>
+                  <p class="card-set__content">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a href="" class="cards">
-                <div class="card-thumb">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__thumb">
                   <img
                     class="img"
                     src="./img/card-5.jpg"
@@ -198,7 +198,7 @@
                     width="370"
                     height="294"
                   />
-                  <div class="card-overlay">
+                  <div class="card-set__overlay">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
                     repudiandae nostrum quo ea sapiente earum quam magni dicta
@@ -207,15 +207,15 @@
                 </div>
                 </div>
                 <div class="card-footer">
-                  <h2 class="cards-heading">Проект Boxes</h2>
-                  <p class="cards-content">Приложение</p>
+                  <h2 class="card-set__heading">Проект Boxes</h2>
+                  <p class="card-set__content">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a href="" class="cards">
-                <div class="card-thumb">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__thumb">
                   <img
                     class="img"
                     src="./img/card-6.jpg"
@@ -223,7 +223,7 @@
                     width="370"
                     height="294"
                   />
-                  <div class="card-overlay">
+                  <div class="card-set__overlay">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
                     repudiandae nostrum quo ea sapiente earum quam magni dicta
@@ -232,22 +232,22 @@
                 </div>
                 </div>
                 <div class="card-footer">
-                  <h2 class="cards-heading">Inspiration has no Borders</h2>
-                  <p class="cards-content">Веб-сайт</p>
+                  <h2 class="card-set__heading">Inspiration has no Borders</h2>
+                  <p class="card-set__content">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a href="" class="cards">
-                <div class="card-thumb">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__thumb">
                   <img
                     src="./img/card-7.jpg"
                     alt="Книга с рисунками"
                     width="370"
                     height="294"
                   />
-                  <div class="card-overlay">
+                  <div class="card-set__overlay">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
                     repudiandae nostrum quo ea sapiente earum quam magni dicta
@@ -257,22 +257,22 @@
                 </div>
 
                 <div class="card-footer">
-                  <h2 class="cards-heading">Издание Limited Edition</h2>
-                  <p class="cards-content">Дизайн</p>
+                  <h2 class="card-set__heading">Издание Limited Edition</h2>
+                  <p class="card-set__content">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="card-item">
-              <a href="" class="cards">
-                <div class="card-thumb">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__thumb">
                   <img
                     src="./img/card-8.jpg"
                     alt="Бирка"
                     width="370"
                     height="294"
                   />
-                  <div class="card-overlay">
+                  <div class="card-set__overlay">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
                     repudiandae nostrum quo ea sapiente earum quam magni dicta
@@ -282,22 +282,22 @@
                 </div>
 
                 <div class="card-footer">
-                  <h2 class="cards-heading">Проект LAB</h2>
-                  <p class="cards-content">Маркетинг</p>
+                  <h2 class="card-set__heading">Проект LAB</h2>
+                  <p class="card-set__content">Маркетинг</p>
                 </div>
               </a>
             </li>
             
-            <li class="card-item">
-              <a href="" class="cards">
-                <div class="card-thumb">
+            <li class="card-set__item">
+              <a href="" class="card-set__link">
+                <div class="card-set__thumb">
                   <img
                     src="./img/card-9.jpg"
                     alt="Ноутбук с приложением"
                     width="370"
                     height="294"
                   />
-                  <div class="card-overlay">
+                  <div class="card-set__overlay">
                   <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
                     repudiandae nostrum quo ea sapiente earum quam magni dicta
@@ -306,8 +306,8 @@
                 </div>
               </div>
                 <div class="card-footer">
-                  <h2 class="cards-heading">Growing Business</h2>
-                  <p class="cards-content">Приложение</p>
+                  <h2 class="card-set__heading">Growing Business</h2>
+                  <p class="card-set__content">Приложение</p>
                 </div>
               </div>
             </a>
