--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           ><span class="logo page-header__logo">Web</span>Studio</a
         >
         <!--navigation-->
-        <nav class="navigation">
+        <nav class="navigation header-navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
               <a href="./index.html" class="navigation__link navigation__link--active">Студия</a>
@@ -82,7 +82,7 @@
 
                <label class="form__label">
                  <span class="form__name">Имя</span>
-                  <input type="text" class="form__input" name="name" autofocus>
+                  <input type="text" class="form__input" name="name" autofocus >
                   <svg class="form__icon" width="20" height="20">
                 <use href="./img/sprite.svg#icon-name"></use>
               </svg>
@@ -98,7 +98,7 @@
 
                 <label class="form__label">
                   <span class="form__name">Почта</span>
-                  <input type="email" class="form__input" name="email">
+                  <input type="mail" class="form__input" name="email">
                   <svg class="form__icon" width="20" height="20">
                 <use href="./img/sprite.svg#icon-email"></use>
               </svg>
