--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
           ><span class="logo page-header__logo">Web</span>Studio</a
         >
         <!--navigation-->
-        <nav class="navigation">
+        <nav class="navigation header-navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
               <a href="./index.html" class="navigation__link">Студия</a>
