--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css"/>
   </head>
 
   <body>
@@ -27,7 +28,7 @@
           ><span class="logo page-header__logo">Web</span>Studio</a
         >
         <!--navigation-->
-        <nav class="navigation header-navigation">
+        <nav class="navigation navigation-header">
           <ul class="navigation__list">
             <li class="navigation__item">
               <a href="./index.html" class="navigation__link navigation__link--active">Студия</a>
