--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
      <header class="page-header">
       <div class="page-header__container container">
         <a href="" class="logo " lang="en"
-          ><span class="logo page-header__logo">Web</span>Studio</a
+          ><span class="logo__web">Web</span>Studio</a
         >
         <!--navigation-->
-        <nav class="navigation navigation-header">
+        <nav class="navigation navigation--header">
           <ul class="navigation__list">
             <li class="navigation__item">
               <a href="./index.html" class="navigation__link">Студия</a>
@@ -40,18 +40,18 @@
         </nav>
         <!--Contacts info-->
         <ul class="contacts">
-          <li class="navigation__item">
+          <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link">
-              <svg class="contacts__icon-mail" width="16" height="12">
+              <svg class="contacts__icon" width="16" height="12">
                 <use href="../img/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="navigation__item">
+          <li class="contacts__item">
             <a href="tel:+380961111111" class="contacts__link"
               ><svg
-                class="contacts__icon-phone"
+                class="contacts__icon"
                 width="10"
                 height="16"
               >
@@ -70,21 +70,21 @@
         <!-- Навигация Портфолио -->
         <div class="container">
           <h1 class="visually-hidden">Навигация Портфолио</h1>
-          <ul class="portfolio-navigation__list">
-            <li class="portfolio-navigation__item">
-              <button type="button" class="portfolio-navigation__button">Все</button>
+          <ul class="portfolio">
+            <li class="portfolio__item">
+              <button type="button" class="portfolio__button">Все</button>
             </li>
-            <li class="portfolio-navigation__item">
-              <button type="button" class="portfolio-navigation__button">Веб-сайты</button>
+            <li class="portfolio__item">
+              <button type="button" class="portfolio__button">Веб-сайты</button>
             </li>
-            <li class="portfolio-navigation__item">
-              <button type="button" class="portfolio-navigation__button">Приложения</button>
+            <li class="portfolio__item">
+              <button type="button" class="portfolio__button">Приложения</button>
             </li>
-            <li class="portfolio-navigation__item">
-              <button type="button" class="portfolio-navigation__button">Дизайн</button>
+            <li class="portfolio__item">
+              <button type="button" class="portfolio__button">Дизайн</button>
             </li>
-            <li class="portfolio-navigation__item">
-              <button type="button" class="portfolio-navigation__button">Маркетинг</button>
+            <li class="portfolio__item">
+              <button type="button" class="portfolio__button">Маркетинг</button>
             </li>
           </ul>
           <!-- Карточки -->
@@ -319,11 +319,11 @@
 
     <!--footer-->
 
-    <footer class="page-footer"><!--logo-footer-->
-      <div class="container footer">
+    <footer class="page-footer">
+      <div class="container footer--flex">
         <div class="page-footer__address">
         <a href="" class="logo" lang="en"
-          ><span class="page-header__logo">Web</span
+          ><span class="logo__web">Web</span
           ><span class="logo page-footer__logo">Studio</span></a
         >
         <address class="address">
